# utah-cs6969-proj

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md
.github/workflows/: backend.yml  frontend.yml  node.js.yml  render-keepalive.yml
backend/: .env.example  .gitignore  Pipfile  agent.py  agents.py  app.py  pipeline.py  portfolio.py  pyproject.toml  requirements.txt  ruff.toml  stock_prices.py
backend/agent_tools/: financial_reports_tools.py  graph_tools.py  news_tools.py  strategist_tools.py  tools.py
backend/data/: historical_stock_prices_2026-03-24_2026-03-31.csv  stock_prices.csv
backend/migrations/: 002_eval_schema_update.sql
backend/scripts/: _rag_schema_probe.py  fetch_stock_prices_csv.py  ingest_10k_filings.py  seed_portfolio_state.py  seed_supabase_stocks.py
backend/supabase/: schema.sql
backend/supabase/migrations/: 001_news_and_eval_tables.sql  003_entity_relationships.sql
backend/tools/: financial_reports_tools.py  tools.py
docs/: 00-OVERVIEW.md  04-CLOSED-POSITIONS.md  07-TREE-RAG.md  08-AGENTS-TOOLS.md  08-SUPABASE-FREE-TIER.md  09-EVALUATION.md  10-NEWS-CORPUS.md  11-PIPELINE-PLAN.md  12-PHASE2-RAG-IMPLEMENTATION.md
frontend/: .env.example  .gitignore  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  fallbackHoldings.js  index.css
script/: build_graph.py  check_supabase_rules.py  document_tree_functions.sql  final_rag_payload.json  run_eval.py  seed_news.py  smoke_test.py  test_10k_llm_nvd.ipynb  test_10k_llm_nvd.py  validate_10k_rag.py
scripts/: check_supabase_rules.py
