[tool.poetry]
name = "portfolio-research-agent-backend"
version = "0.1.0"
description = "FastAPI backend for the portfolio research agent course project"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "0.135.3"
uvicorn = "0.24.0"
supabase = "2.15.3"
yfinance = "0.2.66"
langchain = "1.0.7"
langchain-openai = "1.1.10"
langchain-community = "0.4.1"
langchain-text-splitters = "1.1.0"
langgraph = "1.0.10"
langgraph-prebuilt = "1.0.8"
openai = "2.30.0"
python-dotenv = "1.2.1"
requests = "2.33.1"
duckduckgo-search = "8.1.1"
pymupdf = "1.26.4"

[tool.poetry.group.dev.dependencies]
pytest = "9.0.2"
ruff = "0.15.8"

[tool.poetry.group.ingest.dependencies]
edgartools = "5.28.5"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
